.provarCaches/00D5f000005vwGkEAI/objects/rstkf__printemailtemplateheader__c.object
<CustomObject>
    <description>printemailtemplateheader__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <description>altextid__c</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arcuststmt3__c</description>
        <label>AR Statements Customer Header</label>
        <referenceTo>rstkf__arcuststmt3__c</referenceTo>
        <relationshipLabel>Print Email Template Headers</relationshipLabel>
        <relationshipName>printheaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__balancedueamt__c</fullName>
        <description>balancedueamt__c</description>
        <label>Balance Due Amt</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__city__c</fullName>
        <description>city__c</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__companylogo__c</fullName>
        <description>companylogo__c</description>
        <label>Company Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__country__c</fullName>
        <description>country__c</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__currency__c</fullName>
        <description>currency__c</description>
        <label>Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__currentbalmessage__c</fullName>
        <description>currentbalmessage__c</description>
        <inlineHelpText>Work field to facilitate processing of data for PDF output</inlineHelpText>
        <label>Current-Balance Statement Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__custno__c</fullName>
        <description>custno__c</description>
        <label>Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__dateprinted__c</fullName>
        <description>dateprinted__c</description>
        <label>Date Printed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__email__c</fullName>
        <description>email__c</description>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__headerline4__c</fullName>
        <description>headerline4__c</description>
        <label>Header Text Line 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__headerline5__c</fullName>
        <description>headerline5__c</description>
        <label>Header Text Line 5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__onetimetext__c</fullName>
        <description>onetimetext__c</description>
        <inlineHelpText>Work field to facilitate processing of data for PDF outputs</inlineHelpText>
        <label>One Time Text Messages</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__reportheader__c</fullName>
        <description>reportheader__c</description>
        <label>Report Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Print Email Template Headers</relationshipLabel>
        <relationshipName>printheaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__state__c</fullName>
        <description>state__c</description>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__street__c</fullName>
        <description>street__c</description>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__zip__c</fullName>
        <description>zip__c</description>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Print Email Template Header</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Email Template Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>